fix overflow

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -19,6 +19,7 @@
     border: 1px solid black;
     border-radius: 5px;
     width: 100%;
+    overflow-x: auto;
 }
 .jsonViewer {
     --font-family: var(--font-open-sans) !important;
